add requested parameter to GET /user/:id/rentals
